Initial version working - but does not store the names

--- a/app.json
+++ b/app.json
@@ -13,16 +13,26 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.hpaffrath.MyFirstApp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.hpaffrath.MyFirstApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "eda91cd5-5595-410c-890c-c97c792d8391"
+      }
+    },
+    "plugins": [
+      "expo-sqlite"
+    ]
   }
 }
