--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.20",
     "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -25,9 +26,11 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-stopwatch-timer": "^0.0.21",
     "react-native-web": "~0.19.13",
     "sqlite3": "^5.1.7",
-    "expo-updates": "~0.26.10"
+    "expo-task-manager": "~12.0.3",
+    "expo-background-fetch": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
