--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "MyFirstApp",
+    "name": "SunburyBravesTimer",
     "slug": "MyFirstApp",
     "version": "1.0.0",
     "orientation": "portrait",
